# navigation_picar

catkin_ws/src/picat/: package.xml
catkin_ws/src/picat/launch/: picat.launch
catkin_ws/src/picat/scripts/: motor.py
catkin_ws/src/picat_control/config/: joy_f710.yml
catkin_ws/src/picat_control/launch/: mouse_with_lidar.launch  slam_gmapping.launch  teleop.launch
catkin_ws/src/picat_control/scripts/: joystick_control.py
catkin_ws/src/slam_mapping/: CMakeLists.txt  package.xml
catkin_ws/src/slam_mapping/launch/: slam_remote_robot.launch  slam_stand_alone.launch
catkin_ws/src/slam_mapping/scripts/: keyboard_cmd_vel.py  slam.py
